# bibliothecary

./: techstack.md  techstack.yml
lib/bibliothecary/parsers/: pypi.rb
spec/fixtures/: pyproject.toml
spec/parsers/: pypi_spec.rb
